--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
     "react-parallax-tilt": "^1.7.269",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "styled-components": "^4.0.0",
