--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-router": "^1.93.0",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
@@ -27,6 +29,7 @@
     "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "styled-components": "^4.0.0",
+    "sweetalert2": "^11.15.3",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
