--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
     "react-parallax-tilt": "^1.7.269",
